--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/ab581109-5434-49b1-96ae-80119714d343.png" />
+  <link rel="icon" type="image/svg" href="./LogoByeByeEtiquette.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Food Truck App</title>
 </head>
