--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg" href="./LogoByeByeEtiquette.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Food Truck App</title>
+  <title>Bye Bye Etiquette</title>
 </head>
 
 <body>
