--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg" href="./LogoByeByeEtiquette.svg" />
+  <link rel="icon" type="image/svg" href="/LogoByeByeEtiquette.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bye Bye Etiquette</title>
 </head>
